--- a/examples/get-started/index.html
+++ b/examples/get-started/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!-- <!doctype html>
 <html>
   <head>
     <meta charset='UTF-8' />
     <title>streetscape.gl quick start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <style>
 body { margin: 0; }
 #container { position: fixed; display: flex; width: 100vw; height: 100vh; overflow: hidden; }
@@ -18,6 +19,21 @@ body { margin: 0; }
   </head>
   <body>
     <div id="app"></div>
+    <script src='bundle.js'></script>
+  </body>
+</html> -->
+<!doctype html>
+<html>
+  <head>
+    <meta charset='UTF-8' />
+    <title>streetscape.gl demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="img/ico" href="favicon.ico">
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     <script src='bundle.js'></script>
   </body>
 </html>
